@@ -7019,10 +7019,10 @@ name|dd
 operator|==
 literal|null
 operator|||
-name|dd
-operator|.
 name|isTransitive
-argument_list|()
+argument_list|(
+name|node
+argument_list|)
 operator|)
 condition|)
 block|{
@@ -7181,6 +7181,85 @@ expr_stmt|;
 block|}
 block|}
 block|}
+block|}
+comment|/**      * Returns true if the current dependency descriptor is transitive      * and the parent configuration is transitive.  Otherwise returns false.      * @param node curent node      * @return true if current node is transitive and the parent configuration is      * transitive.      */
+specifier|protected
+name|boolean
+name|isTransitive
+parameter_list|(
+name|IvyNode
+name|node
+parameter_list|)
+block|{
+return|return
+operator|(
+name|node
+operator|.
+name|getDependencyDescriptor
+argument_list|(
+name|node
+operator|.
+name|getParent
+argument_list|()
+argument_list|)
+operator|.
+name|isTransitive
+argument_list|()
+operator|&&
+name|isParentConfTransitive
+argument_list|(
+name|node
+argument_list|)
+operator|)
+return|;
+block|}
+comment|/**      * Checks if the current node's parent configuration is transitive.      * @param node current node      * @return true if the node's parent configuration is transitive      */
+specifier|protected
+name|boolean
+name|isParentConfTransitive
+parameter_list|(
+name|IvyNode
+name|node
+parameter_list|)
+block|{
+name|String
+name|conf
+init|=
+name|node
+operator|.
+name|getParentConf
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|conf
+operator|==
+literal|null
+condition|)
+block|{
+return|return
+literal|true
+return|;
+block|}
+name|Configuration
+name|parentConf
+init|=
+name|node
+operator|.
+name|getParent
+argument_list|()
+operator|.
+name|getConfiguration
+argument_list|(
+name|conf
+argument_list|)
+decl_stmt|;
+return|return
+name|parentConf
+operator|.
+name|isTransitive
+argument_list|()
+return|;
 block|}
 comment|/**      * Returns true if we've already fetched the dependencies for this node and configuration      * @param node node to check      * @param conf configuration to check      * @return true if we've already fetched this dependency      */
 specifier|private
