@@ -2161,6 +2161,42 @@ literal|"extends"
 argument_list|)
 argument_list|)
 decl_stmt|;
+name|String
+name|transitiveValue
+init|=
+name|attributes
+operator|.
+name|getValue
+argument_list|(
+literal|"transitive"
+argument_list|)
+decl_stmt|;
+name|boolean
+name|transitive
+init|=
+operator|(
+name|transitiveValue
+operator|==
+literal|null
+operator|)
+condition|?
+literal|true
+else|:
+name|Boolean
+operator|.
+name|valueOf
+argument_list|(
+name|attributes
+operator|.
+name|getValue
+argument_list|(
+literal|"transitive"
+argument_list|)
+argument_list|)
+operator|.
+name|booleanValue
+argument_list|()
+decl_stmt|;
 name|Configuration
 name|configuration
 init|=
@@ -2208,6 +2244,8 @@ name|split
 argument_list|(
 literal|","
 argument_list|)
+argument_list|,
+name|transitive
 argument_list|)
 decl_stmt|;
 name|fillAttributes
