@@ -3,6 +3,7 @@
 
 	<xs:complexType name="configurations-conf">
         <xs:attribute name="name" type="xs:string" use="required"/>
+        <xs:attribute name="transitive" type="xs:boolean"/>
         <xs:attribute name="extends" type="xs:string"/>
         <xs:attribute name="description" type="xs:string"/>
         <xs:attribute name="deprecated" type="xs:string"/>
