@@ -5512,6 +5512,225 @@ expr_stmt|;
 block|}
 specifier|public
 name|void
+name|testDisableTransitivityPerConfiguration
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// mod2.1 (compile, runtime) depends on mod1.1 which depends on mod1.2
+comment|// compile conf is not transitive
+comment|// first we resolve compile conf only
+name|_ivy
+operator|.
+name|resolve
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/1/org2/mod2.1/ivys/ivy-0.3.1.xml"
+argument_list|)
+operator|.
+name|toURL
+argument_list|()
+argument_list|,
+literal|null
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"compile"
+block|}
+argument_list|,
+name|_cache
+argument_list|,
+literal|null
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+comment|// dependencies
+name|assertTrue
+argument_list|(
+name|_ivy
+operator|.
+name|getIvyFileInCache
+argument_list|(
+name|_cache
+argument_list|,
+name|ModuleRevisionId
+operator|.
+name|newInstance
+argument_list|(
+literal|"org1"
+argument_list|,
+literal|"mod1.1"
+argument_list|,
+literal|"1.0"
+argument_list|)
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|_ivy
+operator|.
+name|getArchiveFileInCache
+argument_list|(
+name|_cache
+argument_list|,
+literal|"org1"
+argument_list|,
+literal|"mod1.1"
+argument_list|,
+literal|"1.0"
+argument_list|,
+literal|"mod1.1"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|_ivy
+operator|.
+name|getIvyFileInCache
+argument_list|(
+name|_cache
+argument_list|,
+name|ModuleRevisionId
+operator|.
+name|newInstance
+argument_list|(
+literal|"org1"
+argument_list|,
+literal|"mod1.2"
+argument_list|,
+literal|"2.0"
+argument_list|)
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|_ivy
+operator|.
+name|getArchiveFileInCache
+argument_list|(
+name|_cache
+argument_list|,
+literal|"org1"
+argument_list|,
+literal|"mod1.2"
+argument_list|,
+literal|"2.0"
+argument_list|,
+literal|"mod1.2"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// then we resolve runtime conf
+name|_ivy
+operator|.
+name|resolve
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/1/org2/mod2.1/ivys/ivy-0.3.1.xml"
+argument_list|)
+operator|.
+name|toURL
+argument_list|()
+argument_list|,
+literal|null
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"runtime"
+block|}
+argument_list|,
+name|_cache
+argument_list|,
+literal|null
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+comment|// dependencies
+name|assertTrue
+argument_list|(
+name|_ivy
+operator|.
+name|getIvyFileInCache
+argument_list|(
+name|_cache
+argument_list|,
+name|ModuleRevisionId
+operator|.
+name|newInstance
+argument_list|(
+literal|"org1"
+argument_list|,
+literal|"mod1.2"
+argument_list|,
+literal|"2.0"
+argument_list|)
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|_ivy
+operator|.
+name|getArchiveFileInCache
+argument_list|(
+name|_cache
+argument_list|,
+literal|"org1"
+argument_list|,
+literal|"mod1.2"
+argument_list|,
+literal|"2.0"
+argument_list|,
+literal|"mod1.2"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
 name|testResolveDiamond
 parameter_list|()
 throws|throws
